started with the creat recipe and last viewd recipes for user
